tests/build/widget/unknown_inherit.stderr
error[E0433]: failed to resolve: maybe a missing crate `not`?
 --> $DIR/unknown_inherit.rs:5:21
  |
5 |     inherit!(super::not::a::thing);
  |                     ^^^ maybe a missing crate `not`?
